fixed the nav menu to avoid overflow

--- a/indexStyles.css
+++ b/indexStyles.css
@@ -15,7 +15,7 @@ body {
   background-color: #000000;
   color: #fff;
   font-family: 'Roboto', sans-serif;
-  min-width: 335px;
+  min-width: 365px;
   max-width: 1024px;
   margin: 0 auto;
   overflow-x: hidden;
@@ -63,12 +63,11 @@ header {
 
 nav {
   width: 100px;
-  height: 100px;
-  background-color: #279177;
+  height: 100px;  
   position: absolute;
-  top: 0px;
-  right: -101px;
+  top: 0px;  
   transition: 1s;
+  right: 0;
 }
 
 nav>.menu {
@@ -84,18 +83,20 @@ nav>label {
   position: absolute;
   padding: 28px;
   background-color: #279177;
-  right: 101px;
+  right: 0;  
   font-size: 33px;
   transition: 1s;
 }
 
 input#menuInput:checked+nav {
   right: 0;
+  background-color: #279177;
 }
 
 input#menuInput:checked+nav>label {
   color: rgb(39, 145, 119);
   background-color: #000000;
+  right: 101px;
 }
 
 @media screen and (min-width:481px) {
@@ -121,7 +122,7 @@ input#menuInput:checked+nav>label {
     position: inherit;
     transition: none;
     width: 100%;
-    background-color: #000000;
+    background-color: #000000 !important;
     height: auto;
   }
 
